@@ -1,3 +1,12 @@
+2009-02-28  Russ Allbery  <rra@stanford.edu>
+
+	* ANSIColor.pm (AUTOLOAD): If ANSI_COLORS_DISABLED is set, return
+	the stringified arguments rather than creating a sub.  This allows
+	colors to work later if ANSI_COLORS_DISABLED is unset rather than
+	making its effects permanent.  It also avoids adding a reset
+	escape sequence when $AUTORESET and ANSI_COLORS_DISABLED are both
+	set.
+
 2008-09-14  Russ Allbery  <rra@stanford.edu>
 
 	* ANSIColor.pm: Add faint as a synonym for dark and improve the
